# oldDrone

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: latex_master.yml  latex_pr.yml  python-style-check.yml  python_test.yml  tex_lint.yml
.templates/: custom-dracula.css  template.md
00_Health_and_safety_documents/: README.md
01_Literature/: toRead.md
02_Progress_reports/: README.md
02_Progress_reports/23_11_08/: weekly_update.md
02_Progress_reports/23_11_15/: weekly_update.md
02_Progress_reports/24_01_17/: weekly_update.md
02_Progress_reports/24_01_24/: weekly_update.md
02_Progress_reports/24_02_14/: weekly_update.md
02_Progress_reports/24_03_06/: weekly_update.md
02_Progress_reports/24_03_08/: weekly_update.md
02_Progress_reports/24_03_13/: weekly_update.md
02_Progress_reports/24_04_03/: weekly_update.md
02_Progress_reports/24_05_01/: weekly_update.md
02_Progress_reports/24_05_15/: weekly_update.md
03_Final_report_and_presentation/: README.md  interim_report.tex  main.tex
03_Final_report_and_presentation/background/: background.tex  disarming-figure.drawio
03_Final_report_and_presentation/bibs/: sample.bib
04_Repository/: README.md  main.py  plot_segments.py  requirements.txt
progress_updates/: README.md  systemDesign.drawio
src/: README.md  main.py  plot_graphs.py
src/mavros_offboard/: CMakeLists.txt  package.xml  readme.md
src/mavros_offboard/src/: datalogger.py  run_traj.py
src/mavros_offboard/src/sampled_trajectories/: trajectory_1.csv  trajectory_2.csv  trajectory_3.csv  trajectory_5.csv
(+158 files in other folders)
