<?xml version="1.0"?>
<package format="2">
  <name>mavros_offboard</name>
  <version>0.0.1</version>
  <description>The mavros_offboard package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License</license>

  <url type="website">TODO: Website URL</url>
  <url type="repository">TODO: Repository URL</url>
  <url type="bugtracker">TODO: Bug Tracker URL</url>

  <author email="your_email@example.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be included in this export, specific to the tool -->
  </export>
</package>

